--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,3 +14,11 @@ a {
     text-decoration: none;
     color: inherit;
 }
+
+html {
+    scroll-behavior: smooth;
+}
+
+section {
+    scroll-margin-top: 80px;
+}
