--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,3 +22,22 @@ html {
 section {
     scroll-margin-top: 80px;
 }
+
+.load-more-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+  margin-bottom: 80px;
+}
+
+.view-all-btn {
+  padding: 15px 40px;
+  background-color: yellow;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: 600;
+  transition: all 0.3s ease;
+}
